--- a/Recovery/Recovery_FrontEnd_User/ClientApp/src/pages/Login.css
+++ b/Recovery/Recovery_FrontEnd_User/ClientApp/src/pages/Login.css
@@ -74,7 +74,7 @@
 
 .formTitleLink-active {
     color: white;
-    border-bottom: 1px solid #6b5b95;
+    border-bottom: 1px solid royalblue;
 }
 
 .formField {
@@ -85,14 +85,14 @@
     display: block;
     text-transform: uppercase;
     font-size: 0.9em;
-    color: white;
+    color: black;
 }
 
 .formFieldInput {
     width: 85%;
     background-color: transparent;
     border: none;
-    color: white;
+    color: black;
     outline: none;
     border-bottom: 1px solid #445366;
     font-size: 1em;
@@ -106,7 +106,7 @@
     }
 
 .formFieldButton {
-    background-color: #6b5b95;
+    background-color: royalblue;
     color: white;
     border: none;
     outline: none;
