update style webapp

--- a/Recovery/Recovery_FrontEnd_User/ClientApp/src/components/NavMenu.css
+++ b/Recovery/Recovery_FrontEnd_User/ClientApp/src/components/NavMenu.css
@@ -2,6 +2,7 @@
   white-space: normal;
   text-align: center;
   word-break: break-all;
+  color: white;
 }
 
 html {
@@ -15,4 +16,15 @@ html {
 
 .box-shadow {
   box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+}
+.logo-image {
+    width: 70px;
+    height: 46px;
+    border-radius: 50%;
+    overflow: hidden;
+    margin-top: -6px;
+}
+.navbar-brand {
+    width: 126px;
+    height: 72px;
 }
