--- a/Recovery/Recovery_FrontEnd_User/ClientApp/src/custom.css
+++ b/Recovery/Recovery_FrontEnd_User/ClientApp/src/custom.css
@@ -6,6 +6,14 @@ a {
 code {
   color: #E01A76;
 }
+header{
+    background-color: darkblue;
+}
+body{
+    background-color: royalblue;
+    background-image: url(../src/images/background.jpg);
+    background-size: cover;
+}
 
 .btn-primary {
   color: #fff;
