--- a/Recovery/Recovery_FrontEnd_User/ClientApp/src/components/Diet.css
+++ b/Recovery/Recovery_FrontEnd_User/ClientApp/src/components/Diet.css
@@ -2,6 +2,7 @@
     font-family: Arial, Helvetica, sans-serif;
     border-collapse: collapse;
     width: 100%;
+    border-radius: 25px;
 }
 
 #meals td, #customers th {
@@ -10,6 +11,10 @@
 }
 
 #meals tr:nth-child(even) {
+        background-color: #f2f2f2;
+}
+
+#meals tr:nth-child(odd) {
         background-color: #f2f2f2;
 }
 
