--- a/Recovery/Recovery_FrontEnd_User/ClientApp/src/pages/Login.css
+++ b/Recovery/Recovery_FrontEnd_User/ClientApp/src/pages/Login.css
@@ -78,35 +78,35 @@
 }
 
 .formField {
-    margin-bottom: 40px;
+    margin-bottom: 20px;
 }
 
 .formFieldLabel {
     display: block;
     text-transform: uppercase;
     font-size: 0.9em;
-    color: black;
+    color: white;
 }
 
 .formFieldInput {
     width: 85%;
     background-color: transparent;
     border: none;
-    color: black;
+    color: white;
     outline: none;
-    border-bottom: 1px solid #445366;
+    border-bottom: 1px solid black;
     font-size: 1em;
     font-weight: 300;
     padding-bottom: 10px;
-    margin-top: 10px;
+    margin-top: 5px;
 }
 
     .formFieldInput::placeholder {
-        color: #616e7f;
+        color: ghostwhite;
     }
 
 .formFieldButton {
-    background-color: royalblue;
+    background-color: darkblue;
     color: white;
     border: none;
     outline: none;
@@ -117,7 +117,7 @@
 }
 
 .formFieldLink {
-    color: #66707d;
+    color: white;
     text-decoration: none;
     display: inline-block;
     border-bottom: 1.5px solid #6b5b95;
@@ -143,6 +143,7 @@
     margin-left: 5px;
 }
 
-.socialMediaButtons {
-    padding: 10px 100px 10px 0px;
+#registerLink{
+    color: white;
 }
+
