--- a/Recovery/Recovery_FrontEnd_User/ClientApp/src/pages/Login.css
+++ b/Recovery/Recovery_FrontEnd_User/ClientApp/src/pages/Login.css
@@ -48,7 +48,13 @@
     border-top-right-radius: 25px;
     border-bottom-right-radius: 25px;
 }
-
+form {
+    width: 25rem !important;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 50px;
+    vertical-align: middle;
+}
 .formCenter {
     margin-bottom: 100px;
 }
@@ -79,20 +85,21 @@
 
 .formField {
     margin-bottom: 20px;
+
 }
 
 .formFieldLabel {
     display: block;
     text-transform: uppercase;
     font-size: 0.9em;
-    color: white;
+    color: royalblue;
 }
 
 .formFieldInput {
     width: 85%;
     background-color: transparent;
     border: none;
-    color: white;
+    color: royalblue;
     outline: none;
     border-bottom: 1px solid black;
     font-size: 1em;
@@ -102,7 +109,7 @@
 }
 
     .formFieldInput::placeholder {
-        color: ghostwhite;
+        color: steelblue;
     }
 
 .formFieldButton {
