--- a/Recovery/Recovery_FrontEnd_User/ClientApp/src/custom.css
+++ b/Recovery/Recovery_FrontEnd_User/ClientApp/src/custom.css
@@ -10,10 +10,11 @@ header{
     background-color: darkblue;
 }
 body{
+    background-color:lightblue;
 }
 
 .btn-primary {
   color: #fff;
   background-color: #1b6ec2;
-  border-color: #1861ac;
+  border-color: darkblue;
 }
