Update user exercise

--- a/Recovery/Recovery_FrontEnd_User/ClientApp/src/custom.css
+++ b/Recovery/Recovery_FrontEnd_User/ClientApp/src/custom.css
@@ -10,7 +10,7 @@ header{
     background-color: darkblue;
 }
 body{
-    background-color:lightblue;
+    background-color:aliceblue;
 }
 
 .btn-primary {
