Added alerts when submit item

--- a/Recovery/Recovery_FrontEnd_User/ClientApp/src/pages/Login.css
+++ b/Recovery/Recovery_FrontEnd_User/ClientApp/src/pages/Login.css
@@ -142,7 +142,7 @@ form {
 }
 
 .formFieldTermsLink {
-    color: white;
+    color: darkblue;
     border-bottom: 1px solid #6b5b95;
     text-decoration: none;
     display: inline-block;
